tests/compiler/test_files/variable_num_too_large.swift
// error

var x = 99999999999999999999999999999999999999999999999999999999999999999999999999

x = x + 1